--- a/labelme/config/default_config.yaml
+++ b/labelme/config/default_config.yaml
@@ -1,41 +1,41 @@
-auto_save: false
-display_label_popup: true
+auto_save: true
+display_label_popup: false
 instance_label_auto_increment: true
-store_data: true
+store_data: false
 keep_prev: false
 logger_level: info
 
 flags: null
 label_flags: null
 labels: null
-file_search: null
+location_search: null
 sort_labels: true
 validate_label: null
 
 # main
 flag_dock:
-  show: true
+  show: false
   closable: true
   movable: true
-  floatable: true
+  floatable: false
 label_dock:
-  show: true
+  show: false
   closable: true
   movable: true
-  floatable: true
+  floatable: false
 shape_dock:
   show: true
   closable: true
   movable: true
   floatable: true
-file_dock:
+location_dock:
   show: true
   closable: true
   movable: true
   floatable: true
 
 # label_dialog
-show_label_text_field: true
+show_label_text_field: false
 label_completion: startswith
 fit_to_content:
   column: true
